# OpenReport-Base

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
OpenReport/: __init__.py
OpenReport/base/: __init__.py  document_generator.py  nodes.py
OpenReport/enumerations/: __init__.py  attribute_nodes.py  open_report_nodes.py  text_modes.py
OpenReport/labs/: __init__.py
OpenReport/labs/word/: __init__.py  word_attributes.py  word_constants.py  word_objects.py  word_utilities.py
OpenReport/schemas/: OpenReportSchemaBase.json  __init__.py
OpenReport/visitor_context/: __init__.py  visitor_context.py
OpenReport/visitors/: __init__.py  visitor.py  visitor_word.py
